--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -6,7 +6,7 @@
     <title>KHHSLINK</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/home.css')}}"
+      href="{{url_for('static', filename='css/home.css')}}"
     />
   </head>
   <body>
@@ -24,7 +24,9 @@
     <section class="summary-card">
       <div class="card">
         <p class="card-title">TODAY</p>
-        <p class="card-text">오늘은 <span id="today-day">0</span>일 입니다</p>
+        <p class="card-text">
+          오늘은 <span id="today-day">{{day}}</span>일 입니다
+        </p>
         <div class="card-row">
           <div class="mini-card">📌 수행 <span id="task-count">0</span>개</div>
           <div class="mini-card">
@@ -37,22 +39,22 @@
     <!-- 캘린더 -->
     <section class="calendar-section">
       <h2>캘린더</h2>
-      {{source|safe}}
+      <div id="calendar">{{calendar|safe}}</div>
     </section>
 
     <!-- 급식 -->
     <section class="meal-section">
       <h2>오늘의 급식</h2>
-      <div id="meal-menu">불러오는 중...</div>
+      <div id="meal-menu">{{meal|safe}}</div>
     </section>
 
     <!-- 하단 네비게이션 -->
     <nav class="bottom-nav">
-      <a href="home.html" class="nav-item active"><span>홈</span></a>
-      <a href="notice.html" class="nav-item"><span>공지</span></a>
-      <a href="alert.html" class="nav-item"><span>알림</span></a>
-      <a href="task.html" class="nav-item"><span>수행</span></a>
-      <a href="study.html" class="nav-item"><span>학습</span></a>
+      <a href="/" class="nav-item active"><span>홈</span></a>
+      <a href="notice" class="nav-item"><span>공지</span></a>
+      <a href="alert" class="nav-item"><span>알림</span></a>
+      <a href="task" class="nav-item"><span>수행</span></a>
+      <a href="study" class="nav-item"><span>학습</span></a>
     </nav>
 
     <script src="script.js"></script>
