--- a/flaskr/templates/alert/alert.html
+++ b/flaskr/templates/alert/alert.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>알림 | KHHSLINK</title>
-  <link rel="stylesheet" href="alert.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/alert.css') }}">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     <h1 class="header-title">알림</h1>
 
     <div class="header-right">
-      <a href="mypage.html">
+      <a href="mypage/mypage">
         <img src="mypage.png" alt="마이페이지" class="mypage-icon">
       </a>
     </div>
@@ -63,11 +63,11 @@
 
   <!--하단 네비게이션-->
   <nav class="bottom-nav">
-    <a href="home.html" class="nav-item"><span>홈</span></a>
-    <a href="notice.html" class="nav-item"><span>공지</span></a>
-    <a href="alert.html" class="nav-item active"><span>알림</span></a>
-    <a href="task.html" class="nav-item"><span>수행</span></a>
-    <a href="study.html" class="nav-item"><span>학습</span></a>
+    <a href="home/home" class="nav-item"><span>홈</span></a>
+    <a href="notice/notice" class="nav-item"><span>공지</span></a>
+    <a href="alert/alert" class="nav-item active"><span>알림</span></a>
+    <a href="task/task" class="nav-item"><span>수행</span></a>
+    <a href="study/study" class="nav-item"><span>학습</span></a>
   </nav>
 
 </body>
