--- a/flaskr/templates/home/home.html
+++ b/flaskr/templates/home/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KHHSLINK</title>
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   </div>
 
   <div class="mypage">
-    <a href="mypage.html" class="mypage">
+    <a href="mypage/mypage" class="mypage">
       <img src="profile-icon.png" alt="마이페이지" class="profile-icon" />
     </a>
   </div>
@@ -48,11 +48,11 @@
 
   <!-- 하단 네비게이션 -->
   <nav class="bottom-nav">
-    <a href="home.html" class="nav-item active"><span>홈</span></a>
-    <a href="notice.html" class="nav-item"><span>공지</span></a>
-    <a href="alert.html" class="nav-item"><span>알림</span></a>
-    <a href="task.html" class="nav-item"><span>수행</span></a>
-    <a href="study.html" class="nav-item"><span>학습</span></a>
+    <a href="home/home" class="nav-item active"><span>홈</span></a>
+    <a href="notice/notice" class="nav-item"><span>공지</span></a>
+    <a href="alert/alert" class="nav-item"><span>알림</span></a>
+    <a href="task/task" class="nav-item"><span>수행</span></a>
+    <a href="study/study" class="nav-item"><span>학습</span></a>
   </nav>
 
   <script src="script.js"></script>
