--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KHHSLINK 로그인</title>
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/longin.css') }}">
 </head>
 <body class="login-body">
 
