--- a/flaskr/templates/mypage/mypage.html
+++ b/flaskr/templates/mypage/mypage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>마이페이지 | KHHSLINK</title>
-  <link rel="stylesheet" href="mypage.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/mypage.css') }}">
 </head>
 <body>
 
