--- a/flaskr/templates/notice/notice.html
+++ b/flaskr/templates/notice/notice.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
+
+
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>공지 | KHHSLINK</title>
-  <link rel="stylesheet" href="notice.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
 </head>
 <body>
 
    <!--  상단 헤더 -->
    <header class="header">
     <div class="header-left">
-      <a herf="mypage.html" class="mypage">
+      <a herf="mypage/mypage" class="mypage">
         <img src="profile-icon.png" alt="마이페이지" class="profile-icon" />
       </a>
     </div>
@@ -19,7 +21,7 @@
     <h1 class="header-title">공지</h1>
 
     <div class="header-right">
-      <a href="mypage.html">
+      <a href="mypage/mypage">
         <img src="mypage.png" alt="마이페이지" class="mypage-icon">
       </a>
     </div>
@@ -60,23 +62,23 @@
 
  <!--하단 네비게이션-->
  <nav class="bottom-nav">
-  <a href="home.html" class="nav-item">
+  <a href="home/home" class="nav-item">
     <span>홈</span>
   </a>
 
-  <a href="notice.html" class="nav-item active">
+  <a href="notice/notice" class="nav-item active">
     <span>공지</span>
   </a>
 
-  <a href="alert.html" class="nav-item">
+  <a href="alert/alert" class="nav-item">
     <span>알림</span>
   </a>
 
-  <a href="task.html" class="nav-item">
+  <a href="task/task" class="nav-item">
     <span>수행</span>
   </a>
 
-  <a href="study.html" class="nav-item">
+  <a href="study/study" class="nav-item">
     <span>학습</span>
   </a>
 </nav>
