--- a/flaskr/templates/study/study.html
+++ b/flaskr/templates/study/study.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>학습자료 | KHHSLINK</title>
-  <link rel="stylesheet" href="study.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/study.css') }}">
 </head>
 <body>
 
