--- a/flaskr/templates/task/task.html
+++ b/flaskr/templates/task/task.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>수행평가 | KHHSLINK</title>
-  <link rel="stylesheet" href="task.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/task.css') }}">
 </head>
 <body>
 
