--- a/flaskr/templates/task/task.html
+++ b/flaskr/templates/task/task.html
@@ -17,7 +17,7 @@
     <h1 class="header-title">수행평가</h1>
   
     <div class="header-right mypage">
-      <a herf="mypage.html" class="mypage">
+      <a herf="mypage/mypage" class="mypage">
         <img src="profile-icon.png" alt="마이페이지" class="profile-icon" />
       </a>
     </div>
@@ -94,23 +94,23 @@
 
    <!--하단 네비게이션-->
    <nav class="bottom-nav">
-    <a href="home.html" class="nav-item">
+    <a href="home.home" class="nav-item">
       <span>홈</span>
     </a>
   
-    <a href="notice.html" class="nav-item">
+    <a href="notice.notice" class="nav-item">
       <span>공지</span>
     </a>
   
-    <a href="alert.html" class="nav-item">
+    <a href="alert.alert" class="nav-item">
       <span>알림</span>
     </a>
   
-    <a href="task.html" class="nav-item active">
+    <a href="task.task" class="nav-item active">
       <span>수행</span>
     </a>
   
-    <a href="study.html" class="nav-item">
+    <a href="study.study" class="nav-item">
       <span>학습</span>
     </a>
   </nav>
