--- a/flaskr/templates/study/study.html
+++ b/flaskr/templates/study/study.html
@@ -109,7 +109,7 @@
       <span>알림</span>
     </a>
   
-    <a href="task/task" class="nav-item">
+    <a href="/task" class="nav-item">
       <span>수행</span>
     </a>
   
