--- a/flaskr/templates/alert/alert.html
+++ b/flaskr/templates/alert/alert.html
@@ -66,7 +66,7 @@
     <a href="home/home" class="nav-item"><span>홈</span></a>
     <a href="notice/notice" class="nav-item"><span>공지</span></a>
     <a href="alert/alert" class="nav-item active"><span>알림</span></a>
-    <a href="task/task" class="nav-item"><span>수행</span></a>
+    <a href="/task" class="nav-item"><span>수행</span></a>
     <a href="study/study" class="nav-item"><span>학습</span></a>
   </nav>
 
